assets/stylesheets/common/tc-message.scss
.tc-message-deleted {
  margin-left: calc(var(--message-left-width) + 0.75em);
  padding: 0;

  .tc-message-expand-deleted {
    color: var(--primary-low-mid);
    padding: 0.25em;

    &:hover {
      background: inherit;
      color: inherit;
    }
  }
}

.tc-message {
  align-items: flex-start;
  position: relative;
  padding: 0.25em 0.5em 0.25em 0.75em;
  background-color: var(--secondary);
  display: flex;
  min-width: 0;

  .chat-message-reaction {
    align-items: center;
    display: inline-flex;
    padding: 0.3em 0.6em;
    margin: 1px 0.25em 1px 0;
    font-size: var(--font-down-2);
    border-radius: 4px;
    border: 1px solid var(--primary-low);
    background: transparent;
    cursor: pointer;
    user-select: none;
    transition: background 0.2s, border-color 0.2s;

    &:not(.reacted) {
      &:hover {
        background: var(--primary-low);
        border-color: var(--primary-low-mid);
      }
    }

    &:not(.show) {
      display: none;
    }

    &.reacted {
      border-color: var(--tertiary-medium);
      background: var(--tertiary-very-low);
      color: var(--tertiary-hover);

      &:hover {
        background: var(--tertiary-low);
      }
    }

    .emoji {
      height: 15px;
      margin-right: 4px;
      width: auto;
    }
  }

  &.tc-action {
    background-color: var(--highlight-medium);
  }

  &.deleted {
    background-color: var(--danger-low);
  }

  .not-mobile-device &.deleted:hover {
    background-color: var(--danger-hover);
  }

  &.transition-slow {
    transition: 2s linear background-color;
  }

  .tc-avatar {
    flex-shrink: 0;
    width: var(--message-left-width);
  }

  &.user-info-hidden {
    .tc-time {
      color: var(--secondary-medium);
      flex-shrink: 0;
      font-size: var(--font-down-2);
      margin-top: 0.4em;
      visibility: hidden;
      width: var(--message-left-width);
    }

    .tc-msgactions-hover {
      top: -2em;
    }
  }

  &.is-reply {
    display: grid;
    grid-template-columns: var(--message-left-width) 1fr;
    grid-template-rows: 30px auto;
    grid-template-areas:
      "replyto replyto"
      "avatar message";

    .tc-reply-display {
      grid-area: replyto;
      cursor: pointer;

      .d-icon {
        color: var(--primary-high);
      }
    }

    .tc-avatar {
      grid-area: avatar;
      width: 100%;
    }

    .tc-message-container {
      grid-area: message;
    }
  }

  .tc-message-container {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    word-break: break-word;
    overflow-wrap: break-word;
    min-width: 0;
  }

  .tc-avatar-container {
    align-items: flex-start;
    display: flex;
    cursor: pointer;
    flex-shrink: 0;
    justify-content: center;
    width: 28px;
  }

  .tc-bot-indicator {
    text-transform: uppercase;
    padding: 0.25em;
    background: var(--primary-low);
    border-radius: 3px;
    font-size: var(--font-down-2);
    margin-left: -0.25em;
  }

  .tc-text {
    min-width: 0;
    width: 100%;

    code {
      font-size: var(--font-down-1);
      width: 100%;
    }

    .mention.highlighted {
      background: var(--tertiary-low);
      color: var(--primary);
    }

    .valid-mention {
      padding: 0 4px 1px;
      border-radius: 8px;
      display: inline-block;
    }

    img.ytp-thumbnail-image {
      height: 100%;
      max-height: unset;

      &:hover {
        border-radius: 0;
      }
    }
  }

  .tc-message-edited {
    display: inline-block;
    color: var(--primary-medium);
    font-size: var(--font-down-1);
  }

  .chat-message-reaction-list {
    position: relative;
    margin-top: 0.25em;
    display: flex;
    flex-wrap: wrap;

    .reaction-users-list {
      position: absolute;
      top: -2px;
      transform: translateY(-100%);
      border: 1px solid var(--primary-low);
      border-radius: 6px;
      padding: 0.5em;
      background: var(--primary-very-low);
      max-width: 300px;
      z-index: 3;
    }

    .chat-message-react-btn {
      vertical-align: top;
      padding: 0em 0.25em;
      background: none;
      border: none;

      .d-icon {
        color: var(--primary-high);
      }

      &:hover {
        .d-icon {
          color: var(--primary);
        }
      }
    }
  }

  .tc-send-error {
    text-align: center;
    color: var(--danger-medium);
  }

  .chat-message-mention-warning {
    position: relative;
    margin-top: 0.25em;
    font-size: var(--font-down-1);

    .dismiss-mention-warning {
      position: absolute;
      top: 5px;
      right: 5px;
      cursor: pointer;
    }

    .cannot-see,
    .without-membership {
      margin: 0.25em 0;
    }

    .invite-link {
      color: var(--tertiary);
      cursor: pointer;
    }
  }
}

.chat-message.highlighted .tc-message {
  background-color: var(--tertiary-low) !important;
}

.tc-msgactions-hover {
  position: absolute;
  opacity: 0;
  padding-left: 4em;
  padding-top: 0.25em;
  pointer-events: none;
  right: 0.25em;
  top: -0.75em;
  z-index: 2;
}

.tc-message.is-reply .tc-msgactions-hover {
  top: 0.5em;
}

.tc-msgactions {
  border-radius: 0.25em;
  background-color: var(--secondary);
  display: flex;

  .link-to-message-btn {
    .d-icon {
      transition: all 0.25s ease-in-out;
    }

    &.copied {
      .d-icon {
        transform: scale(1.1);
        color: var(--tertiary);
      }
    }
  }

  .react-btn,
  .reply-btn {
    border: 1px solid transparent;
    border-bottom-color: var(--primary-low);
    border-radius: 0;
    border-top-color: var(--primary-low);
    margin-right: -1px;
    padding: 0.5em 0;
    width: 2.5em;
    transition: background 0.2s, border-color 0.2s;

    &:hover {
      background: var(--primary-low);
      border-color: var(--primary-low-mid);
      color: var(--primary-medium);
      z-index: 1;
    }

    &:focus {
      .d-icon {
        color: var(--primary);
      }
    }

    &:first-child {
      border-bottom-left-radius: 0.25em;
      border-top-left-radius: 0.25em;
    }

    &:first-child:not(:hover) {
      border-color: var(--primary-low);
      border-right-color: transparent;
    }

    .d-icon {
      color: var(--primary-low-mid);
    }
  }

  .more-buttons {
    .select-kit-header {
      background: none;
      border: 1px solid var(--primary-low);
      border-left-color: transparent;
      border-radius: 0 0.25em 0.25em 0;
      padding: 0.5em 0;
      width: 2.5em;
      transition: background 0.2s, border-color 0.2s;

      &:focus {
        border-color: var(--primary-low);
        border-left-color: transparent;
        background: var(--primary-low);

        .select-kit-header-wrapper .d-icon {
          color: var(--primary);
        }
      }

      .select-kit-header-wrapper {
        justify-content: center;

        .d-icon {
          color: var(--primary-low-mid);
          margin: 0;
        }
      }

      &:hover {
        background: var(--primary-low);
        border-color: var(--primary-low-mid);

        .select-kit-header-wrapper {
          .d-icon {
            color: var(--primary);
          }
        }
      }
    }
  }

  .chat-message-reaction {
    align-items: center;
    border-radius: 0;
    border-left-color: transparent;
    border-right-color: transparent;
    box-sizing: border-box;
    font-size: var(--font-0);
    justify-content: center;
    margin: 0;
    margin-right: -1px;
    padding: 0.5em 0;
    width: 2.5em;

    &:hover {
      z-index: 2;
    }

    &:focus {
      background: var(--primary-low);
      outline: none;
    }

    &:first-child {
      border-bottom-left-radius: 0.25em;
      border-left-color: var(--primary-low);
      border-top-left-radius: 0.25em;
    }

    &.reacted {
      border-left-color: var(--tertiary-medium);
      z-index: 1;

      &:focus {
        background: var(--tertiary-low);
      }
    }

    .emoji {
      height: 15px;
      width: auto;
      margin: 0;
    }
  }
}

.tc-meta-data {
  color: var(--secondary-medium);
  width: 100%;

  .names {
    color: var(--secondary-low);
    display: inline-block;
    vertical-align: bottom;
    margin-right: 0.25em;

    &.first {
      font-weight: bold;
    }
  }
}

.tc-messages-container {
  .not-mobile-device & .tc-message:hover,
  .tc-message.tc-message-selected {
    background: var(--primary-very-low);
  }

  .not-mobile-device & .tc-message:hover,
  .tc-message.tc-message-selected,
  .tc-message:focus-within {
    .tc-msgactions-hover {
      opacity: 1;
      pointer-events: initial;
    }
  }

  .not-mobile-device & .user-info-hidden:hover,
  .user-info-hidden.tc-message-selected {
    .tc-time {
      visibility: visible;
    }
  }

  .not-mobile-device & .chat-message-reaction-list .chat-message-react-btn {
    display: none;
  }

  .not-mobile-device & .tc-message:hover {
    .chat-message-reaction-list .chat-message-react-btn {
      display: inline-block;
    }
  }
}

.tc-action-text {
  font-style: italic;
}

.tc-message-separator {
  margin: 0.25rem 0 0.25rem 1rem;
  display: flex;
  font-size: var(--font-down-1);
  position: relative;

  &.new-message {
    color: var(--danger-medium);

    .tc-separator {
      background-color: var(--danger-medium);
    }
  }

  &.first-daily-message {
    .tc-text {
      color: var(--secondary-low);
      font-weight: 600;
    }

    .tc-separator {
      background-color: var(--secondary-high);
    }
  }

  .tc-text {
    margin: 0 auto;
    padding: 0 0.75rem;
    z-index: 1;
    background: var(--secondary);
  }

  .tc-separator {
    position: absolute;
    width: 100%;
    height: 1px;
    top: 50%;
  }
}

.tc-text img.chat-img-upload {
  max-width: 100%;
  height: unset;
}

.full-page-chat {
  .tc-message {
    background: var(--primary-very-low);
  }

  .not-mobile-device & .tc-message:hover,
  .tc-message.tc-message-selected {
    background: var(--primary-very-low);
  }
}

.has-full-page-chat .tc-message .onebox,
.topic-chat-float-container .tc-message .onebox {
  margin: 0.5em 0;
  border-width: 2px;

  header {
    margin-bottom: 0.5em;
  }

  img {
    grid-area: image;
    max-height: 150px;
  }

  h3 a,
  h4 a {
    font-size: 14px;
  }

  pre {
    display: flex;
    max-height: 150px;
  }

  p {
    overflow: hidden;
  }
}

.topic-chat-float-container .tc-message .onebox {
  width: 85%;
  border: 2px solid var(--primary-low);

  header {
    margin-bottom: 0.5em;
  }

  .onebox-body {
    grid-template-rows: auto auto auto;
    overflow: auto;
  }

  h3 {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    font-weight: 500;
    font-size: var(--font-down-1);
  }

  p {
    display: none;
  }
}

